k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: homeassistant
  name: homeassistant
  namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      volumes:
        - name: usb
          hostPath:
            path: /dev/serial/by-id/usb-Nabu_Casa_SkyConnect_v1.0_566c90e91e97ed118a1ac298a7669f5d-if00-port0
        #    type: CharDevice
        #    readOnly: false
        - name: ha-storage
          persistentVolumeClaim:
            claimName: ha-storage
        - name: ha-mysql
          persistentVolumeClaim:
            claimName: ha-mysql
        - name: dbus
          hostPath:
          path: /run/dbus
      containers:
        - image: ghcr.io/home-assistant/home-assistant:2024.1.4 # {"$imagepolicy": "flux-system:homeassistant"}
          name: home-assistant
          volumeMounts:
            - name: ha-storage
              mountPath: /config
            - name: dbus
              mountPath: /run/dbus
            - name: usb
              mountPath: /dev/ttyUSB0
          securityContext:
            privileged: true
        - image: mysql:8.1.0 # {"$imagepolicy": "flux-system:homeassistant-mysql-no-more"}
          name: mysql
          volumeMounts:
            - name: ha-mysql
              mountPath: /var/lib/mysql
